--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "index.js"
   ],
   "dependencies": {
-    "stylus-loader": "^2.1.1"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.2"
   },
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "license": "MIT",
